--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@
 .ant-descriptions-item-label {
   width: 100px;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 10px;
+}
